leetcode daily challenge scraping stuff

--- a/leetcode-getRecents.ipynb
+++ b/leetcode-getRecents.ipynb
@@ -194,24 +194,69 @@
        "      <td>/problems/delete-and-earn/</td>\n",
        "      <td>{'questionFrontendId': '740', 'title': 'Delete...</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2022-03-06</td>\n",
+       "      <td>NotStart</td>\n",
+       "      <td>/problems/count-all-valid-pickup-and-delivery-...</td>\n",
+       "      <td>{'questionFrontendId': '1359', 'title': 'Count...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2022-03-07</td>\n",
+       "      <td>NotStart</td>\n",
+       "      <td>/problems/merge-two-sorted-lists/</td>\n",
+       "      <td>{'questionFrontendId': '21', 'title': 'Merge T...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2022-03-08</td>\n",
+       "      <td>NotStart</td>\n",
+       "      <td>/problems/linked-list-cycle/</td>\n",
+       "      <td>{'questionFrontendId': '141', 'title': 'Linked...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2022-03-09</td>\n",
+       "      <td>NotStart</td>\n",
+       "      <td>/problems/remove-duplicates-from-sorted-list-ii/</td>\n",
+       "      <td>{'questionFrontendId': '82', 'title': 'Remove ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2022-03-10</td>\n",
+       "      <td>NotStart</td>\n",
+       "      <td>/problems/add-two-numbers/</td>\n",
+       "      <td>{'questionFrontendId': '2', 'title': 'Add Two ...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         date userStatus                          link  \\\n",
-       "0  2022-03-01   NotStart      /problems/counting-bits/   \n",
-       "1  2022-03-02   NotStart     /problems/is-subsequence/   \n",
-       "2  2022-03-03   NotStart  /problems/arithmetic-slices/   \n",
-       "3  2022-03-04   NotStart    /problems/champagne-tower/   \n",
-       "4  2022-03-05   NotStart    /problems/delete-and-earn/   \n",
+       "         date userStatus                                               link  \\\n",
+       "0  2022-03-01   NotStart                           /problems/counting-bits/   \n",
+       "1  2022-03-02   NotStart                          /problems/is-subsequence/   \n",
+       "2  2022-03-03   NotStart                       /problems/arithmetic-slices/   \n",
+       "3  2022-03-04   NotStart                         /problems/champagne-tower/   \n",
+       "4  2022-03-05   NotStart                         /problems/delete-and-earn/   \n",
+       "5  2022-03-06   NotStart  /problems/count-all-valid-pickup-and-delivery-...   \n",
+       "6  2022-03-07   NotStart                  /problems/merge-two-sorted-lists/   \n",
+       "7  2022-03-08   NotStart                       /problems/linked-list-cycle/   \n",
+       "8  2022-03-09   NotStart   /problems/remove-duplicates-from-sorted-list-ii/   \n",
+       "9  2022-03-10   NotStart                         /problems/add-two-numbers/   \n",
        "\n",
        "                                            question  \n",
        "0  {'questionFrontendId': '338', 'title': 'Counti...  \n",
        "1  {'questionFrontendId': '392', 'title': 'Is Sub...  \n",
        "2  {'questionFrontendId': '413', 'title': 'Arithm...  \n",
        "3  {'questionFrontendId': '799', 'title': 'Champa...  \n",
-       "4  {'questionFrontendId': '740', 'title': 'Delete...  "
+       "4  {'questionFrontendId': '740', 'title': 'Delete...  \n",
+       "5  {'questionFrontendId': '1359', 'title': 'Count...  \n",
+       "6  {'questionFrontendId': '21', 'title': 'Merge T...  \n",
+       "7  {'questionFrontendId': '141', 'title': 'Linked...  \n",
+       "8  {'questionFrontendId': '82', 'title': 'Remove ...  \n",
+       "9  {'questionFrontendId': '2', 'title': 'Add Two ...  "
       ]
      },
      "execution_count": 5,
@@ -293,7 +338,8 @@
     "daily_df['question']\n",
     "titleSlug = daily_df['question'][0]['titleSlug']\n",
     "qId = daily_df['question'][0]['questionFrontendId']\n",
-    "print(qId, titleSlug)\n"
+    "print(qId, titleSlug)\n",
+    "\n"
    ]
   },
   {
@@ -355,6 +401,88 @@
     "#     submits_df = get_submissions(titleSlug)\n",
     "#     print(submits_df)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # print(queries.QUERY_ACTIVECODINGCHALLENGE)\n",
+    "# base_url = 'https://leetcode.com/graphql/'\n",
+    "# url = base_url\n",
+    "# headers = {\"Authorization\": \"Bear token\"}\n",
+    "# result = requests.post(url, \n",
+    "#     json={'query': queries.QUERY_ACTIVECODINGCHALLENGE})\n",
+    "# print(result.status_code) # 499= maybe CSRF?\n",
+    "# # print(result.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### WITH SESSION + cOOKE \n",
+    "# https://stackoverflow.com/a/65418208/3413574\n",
+    "url = 'https://leetcode.com/graphql/'\n",
+    "LEETCODE_SESSION = os.getenv('LEETCODE_SESSION')\n",
+    "cookie = {'LEETCODE_SESSION':LEETCODE_SESSION}\n",
+    "# json={'query':'query {currentTimestamp}'} # current timestamp\n",
+    "\n",
+    "##### WRONG\n",
+    "# json={'query':queries.QUERY_ACTIVECODINGCHALLENGE}\n",
+    "# json={'query':'activeDailyCodingChallengeQuestion'}\n",
+    "data={'query':'''query {dailyCodingChallengeV2(year:2022,month:3){challenges{date link userStatus \n",
+    "            question {\n",
+    "                questionFrontendId\n",
+    "                title\n",
+    "                titleSlug\n",
+    "            }\n",
+    "}}}'''} #https://stackoverflow.com/a/46118737/3413574\n",
+    "session = requests.Session()\n",
+    "r = session.post(url,json=data,cookies=cookie)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "date/frontendId/titleSlug/link/solved\n",
+      "2022-03-01 #338 counting-bits https://leetcode.com/problems/counting-bits/ False\n",
+      "2022-03-02 #392 is-subsequence https://leetcode.com/problems/is-subsequence/ False\n",
+      "2022-03-03 #413 arithmetic-slices https://leetcode.com/problems/arithmetic-slices/ False\n",
+      "2022-03-04 #799 champagne-tower https://leetcode.com/problems/champagne-tower/ False\n",
+      "2022-03-05 #740 delete-and-earn https://leetcode.com/problems/delete-and-earn/ False\n",
+      "2022-03-06 #1359 count-all-valid-pickup-and-delivery-options https://leetcode.com/problems/count-all-valid-pickup-and-delivery-options/ False\n",
+      "2022-03-07 #21 merge-two-sorted-lists https://leetcode.com/problems/merge-two-sorted-lists/ False\n",
+      "2022-03-08 #141 linked-list-cycle https://leetcode.com/problems/linked-list-cycle/ True\n",
+      "2022-03-09 #82 remove-duplicates-from-sorted-list-ii https://leetcode.com/problems/remove-duplicates-from-sorted-list-ii/ False\n",
+      "2022-03-10 #2 add-two-numbers https://leetcode.com/problems/add-two-numbers/ True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print(r.text)\n",
+    "objs = json.loads(r.text)['data']['dailyCodingChallengeV2']['challenges']\n",
+    "print('date/frontendId/titleSlug/link/solved')\n",
+    "for o in objs:\n",
+    "    date = o['date']\n",
+    "    frontendId = o['question']['questionFrontendId'] \n",
+    "    titleSlug = o['link'].split(\"/\")[2]\n",
+    "    link = \"https://leetcode.com\"+o['link']\n",
+    "    if o['userStatus'] == 'Finish':\n",
+    "        solved = True\n",
+    "    else:\n",
+    "        solved = False\n",
+    "    print(date,'#'+frontendId,titleSlug,link,solved)\n"
    ]
   }
  ],
