algo-interview-book stuff

--- a/algo-interview-links.ipynb
+++ b/algo-interview-links.ipynb
@@ -1,8 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "아니면 yaml로 저장해볼까?\n",
+    "\n",
+    "```yaml\n",
+    "question:\n",
+    "    number: 234\n",
+    "    slug: \"palindrome-linked-list\"\n",
+    "    chapter: 6\n",
+    "    solutions:[??????]\n",
+    "\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -90,12 +107,16 @@
        "5                          [5-1.py](2-python/ch06/5-1.py)  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 책 깃헙 https://github.com/onlybooks/algorithm-interview\n",
+    "# 정오표 https://www.onlybook.co.kr/entry/algorithm-interview-errata\n",
+    "# 기타코드, 효율적인 퓰이 below README\n",
+    "\n",
     "import pandas as pd\n",
     "\n",
     "f = open('algo-interview-questions.csv','r',encoding='utf8')\n",
@@ -112,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -139,9 +160,13 @@
        "      <th>question</th>\n",
        "      <th>chapter</th>\n",
        "      <th>solutions</th>\n",
+       "      <th>slug</th>\n",
+       "      <th>completed</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>number</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -153,54 +178,141 @@
        "      <td>https://leetcode.com/problems/valid-palindrome/</td>\n",
        "      <td>6장. 문자열 조작</td>\n",
        "      <td>[1-1.py](2-python/ch06/1-1.py)&lt;br&gt;[1-2.py](2-p...</td>\n",
+       "      <td>slug</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>https://leetcode.com/problems/reverse-string/</td>\n",
        "      <td>6장. 문자열 조작</td>\n",
        "      <td>[2-1.py](2-python/ch06/2-1.py)&lt;br&gt;[2-2.py](2-p...</td>\n",
+       "      <td>slug</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>https://leetcode.com/problems/reorder-data-in-...</td>\n",
        "      <td>6장. 문자열 조작</td>\n",
        "      <td>[3-1.py](2-python/ch06/3-1.py)</td>\n",
+       "      <td>slug</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>https://leetcode.com/problems/most-common-word/</td>\n",
        "      <td>6장. 문자열 조작</td>\n",
        "      <td>[4-1.py](2-python/ch06/4-1.py)</td>\n",
+       "      <td>slug</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>https://leetcode.com/problems/group-anagrams/</td>\n",
        "      <td>6장. 문자열 조작</td>\n",
        "      <td>[5-1.py](2-python/ch06/5-1.py)</td>\n",
+       "      <td>slug</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91(문제 3)</th>\n",
+       "      <td>https://programmers.co.kr/learn/courses/30/les...</td>\n",
+       "      <td>부록 B. 카카오 공채 문제 풀이</td>\n",
+       "      <td>[3.py](appendix-B/3.py)</td>\n",
+       "      <td>slug</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>92(문제 4)</th>\n",
+       "      <td>https://programmers.co.kr/learn/courses/30/les...</td>\n",
+       "      <td>부록 B. 카카오 공채 문제 풀이</td>\n",
+       "      <td>[4.py](appendix-B/4.py)</td>\n",
+       "      <td>slug</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93(문제 5)</th>\n",
+       "      <td>https://programmers.co.kr/learn/courses/30/les...</td>\n",
+       "      <td>부록 B. 카카오 공채 문제 풀이</td>\n",
+       "      <td>[5.py](appendix-B/5.py)</td>\n",
+       "      <td>slug</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94(문제 6)</th>\n",
+       "      <td>https://programmers.co.kr/learn/courses/30/les...</td>\n",
+       "      <td>부록 B. 카카오 공채 문제 풀이</td>\n",
+       "      <td>[6.py](appendix-B/6.py)</td>\n",
+       "      <td>slug</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95(문제 7)</th>\n",
+       "      <td>https://programmers.co.kr/learn/courses/30/les...</td>\n",
+       "      <td>부록 B. 카카오 공채 문제 풀이</td>\n",
+       "      <td>[7.py](appendix-B/7.py)</td>\n",
+       "      <td>slug</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>95 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                 question     chapter  \\\n",
-       "number                                                                  \n",
-       "1         https://leetcode.com/problems/valid-palindrome/  6장. 문자열 조작   \n",
-       "2           https://leetcode.com/problems/reverse-string/  6장. 문자열 조작   \n",
-       "3       https://leetcode.com/problems/reorder-data-in-...  6장. 문자열 조작   \n",
-       "4         https://leetcode.com/problems/most-common-word/  6장. 문자열 조작   \n",
-       "5           https://leetcode.com/problems/group-anagrams/  6장. 문자열 조작   \n",
+       "                                                   question  \\\n",
+       "number                                                        \n",
+       "1           https://leetcode.com/problems/valid-palindrome/   \n",
+       "2             https://leetcode.com/problems/reverse-string/   \n",
+       "3         https://leetcode.com/problems/reorder-data-in-...   \n",
+       "4           https://leetcode.com/problems/most-common-word/   \n",
+       "5             https://leetcode.com/problems/group-anagrams/   \n",
+       "...                                                     ...   \n",
+       "91(문제 3)  https://programmers.co.kr/learn/courses/30/les...   \n",
+       "92(문제 4)  https://programmers.co.kr/learn/courses/30/les...   \n",
+       "93(문제 5)  https://programmers.co.kr/learn/courses/30/les...   \n",
+       "94(문제 6)  https://programmers.co.kr/learn/courses/30/les...   \n",
+       "95(문제 7)  https://programmers.co.kr/learn/courses/30/les...   \n",
        "\n",
-       "                                                solutions  \n",
-       "number                                                     \n",
-       "1       [1-1.py](2-python/ch06/1-1.py)<br>[1-2.py](2-p...  \n",
-       "2       [2-1.py](2-python/ch06/2-1.py)<br>[2-2.py](2-p...  \n",
-       "3                          [3-1.py](2-python/ch06/3-1.py)  \n",
-       "4                          [4-1.py](2-python/ch06/4-1.py)  \n",
-       "5                          [5-1.py](2-python/ch06/5-1.py)  "
+       "                     chapter  \\\n",
+       "number                         \n",
+       "1                 6장. 문자열 조작   \n",
+       "2                 6장. 문자열 조작   \n",
+       "3                 6장. 문자열 조작   \n",
+       "4                 6장. 문자열 조작   \n",
+       "5                 6장. 문자열 조작   \n",
+       "...                      ...   \n",
+       "91(문제 3)  부록 B. 카카오 공채 문제 풀이   \n",
+       "92(문제 4)  부록 B. 카카오 공채 문제 풀이   \n",
+       "93(문제 5)  부록 B. 카카오 공채 문제 풀이   \n",
+       "94(문제 6)  부록 B. 카카오 공채 문제 풀이   \n",
+       "95(문제 7)  부록 B. 카카오 공채 문제 풀이   \n",
+       "\n",
+       "                                                  solutions  slug  completed  \n",
+       "number                                                                        \n",
+       "1         [1-1.py](2-python/ch06/1-1.py)<br>[1-2.py](2-p...  slug       True  \n",
+       "2         [2-1.py](2-python/ch06/2-1.py)<br>[2-2.py](2-p...  slug       True  \n",
+       "3                            [3-1.py](2-python/ch06/3-1.py)  slug       True  \n",
+       "4                            [4-1.py](2-python/ch06/4-1.py)  slug       True  \n",
+       "5                            [5-1.py](2-python/ch06/5-1.py)  slug       True  \n",
+       "...                                                     ...   ...        ...  \n",
+       "91(문제 3)                            [3.py](appendix-B/3.py)  slug       True  \n",
+       "92(문제 4)                            [4.py](appendix-B/4.py)  slug       True  \n",
+       "93(문제 5)                            [5.py](appendix-B/5.py)  slug       True  \n",
+       "94(문제 6)                            [6.py](appendix-B/6.py)  slug       True  \n",
+       "95(문제 7)                            [7.py](appendix-B/7.py)  slug       True  \n",
+       "\n",
+       "[95 rows x 5 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,8 +325,59 @@
     "# re.findall(pattern,arr[0])[0]\n",
     "\n",
     "questions['question'] = [re.findall(pattern,questions['question'][x])[0] for x in range(len(questions))]\n",
+    "questions['slug'] = \"slug\"\n",
+    "questions['completed'] = True\n",
     "\n",
-    "questions.head()"
+    "questions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Definition for singly-linked list.\n",
+    "class ListNode:\n",
+    "    def __init__(self, val=0, next=None):\n",
+    "        self.val = val\n",
+    "        self.next = next\n",
+    "nums = [1,2,3,4,5]\n",
+    "head = ListNode()\n",
+    "p = head\n",
+    "for n in nums:\n",
+    "    p.val = n\n",
+    "    p.next = ListNode()\n",
+    "    print(p.val)\n",
+    "    p = p.next\n",
+    "\n",
+    "p = head\n",
+    "while p != None:\n",
+    "    print(\"x\",p.val)\n",
+    "    p = p.next\n",
+    "\n",
+    "# #####################\n",
+    "# node, prev = head, None\n",
+    "# while node:\n",
+    "#     next, node.next = node.next, prev\n",
+    "#     prev, node = node, next\n",
+    "# #####################\n",
+    "# p = prev\n",
+    "# while p != None:\n",
+    "#     print(\"x\",p.val)\n",
+    "#     p = p.next"
    ]
   }
  ],
